see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

15-Jan-2011 Jean-Marie Simonet
 $ Correcting lang string typo
 #$ [#24384] Missing Language string Cache Unwritable
 # [#24396] MODULES_ERR_XML incorrectly called. Thanks Michael
 
14-Jan-2011 Jean-Marie Simonet
 $ Correcting lang string typo
 # [#24377] Adding a "Location" column in Language Manager
 
13-Jan-2011 Jean-Marie Simonet
 + Adding pt_br.gif flag for langswitcher
 $ [#24328] Inconsistent term for User Group. Thanks Mark.
 # [#24299] Issue with MySQL compatibility in joomla.sql with params fields. Thanks Sam.
 $ Adding missing string in JLIB

12-Jan-2011 Jean-Marie Simonet
 $ Correcting errors in fa-IR, aa-AA and he-IL installation langs
 # Correction in credits & site en-GB.xml
 $ Adding 2 JLIB_ strings to installation en-GB.ini. Thanks Eraser
 # [#24294] Javascript error in installation. Thanks Christophe
 # [#24301] /templates status indicator in backend. Thanks Sergey
 + [#24292] Refresh Cache in Extension Manager: Failed loading XML file
 

-------------------- 1.6.0 Stable Release [10-Jan-2011] ------------------

10-Jan-2010 Ian MacLennan
 ! Recompressing system javascript
 # Fixed issue [#24232] SQL Injection can result in information disclosure (Ian MacLennan).

10-Jan-2011 Christophe Demko
 # [#24249] Cannot edit a weblink from the frontend (Andrew Eddie)
 # [#24233] Error parameters formated in tinymce (Nikolai Plath)
 # [#24258] Some article code can send JFilterInput into an endless loop (Ian MacLennan)
 + Adding Code contributors in CREDITS
 # [#24283] J!1.6 lacks a remove installation folder screen

10-Jan-2011 Jean-Marie Simonet